feat: Add initial `appsettings.json` with base configurations for LLM, Volcengine, MiniMax, pipeline, and logging.

--- a/src/AutoCinema.Pro/appsettings.json
+++ b/src/AutoCinema.Pro/appsettings.json
@@ -1,14 +1,14 @@
 {
     "Llm": {
         "Provider": "Volcengine",
-        "ApiKey": "9f24e341-475b-4fb4-90ad-1812f47f7ec8",
+        "ApiKey": "",
         "Model": "doubao-seed-1-6-251015",
         "Endpoint": "https://ark.cn-beijing.volces.com/api/v3/responses",
         "Temperature": 0.7,
         "MaxTokens": 4000
     },
     "Volcengine": {
-        "ApiKey": "9f24e341-475b-4fb4-90ad-1812f47f7ec8",
+        "ApiKey": "",
         "Endpoint": "https://ark.cn-beijing.volces.com/api/v3/images/generations",
         "Model": "doubao-seedream-4-5-251128",
         "ImageSize": "2K",
@@ -19,7 +19,7 @@
         "MaxConcurrency": 3
     },
     "MiniMax": {
-        "ApiKey": "sk-api-i-QEMlV5u1g4rqZYT7Ke2scmVta5TUCK9G6hLQGDCdYO-EBvM2KueL4zNyMQHHMjaZ0h-RMQNjifB6-fiL--RcGuJejvzWIvBg0udUYK9hYTOesIAHGiBdA",
+        "ApiKey": "",
         "Endpoint": "https://api.minimaxi.com/v1/t2a_v2",
         "Model": "speech-2.6-hd",
         "VoiceId": "ttv-voice-2025081621082325-fLjwgLRW",
